--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
   <head>
 
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>José Luis Parra Fajardo - Perfil Profesional</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">José Luis Parra Fajardo</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -38,19 +38,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#services">Roles</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Habilidades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="#about">Proceso</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+              <a class="nav-link js-scroll-trigger" href="#team">Biografía</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Contacto</a>
             </li>
           </ul>
         </div>
@@ -61,9 +61,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To Our Studio!</div>
-          <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+          <div class="intro-lead-in">¡Bienvenido a mi pagina peronal!</div>
+          <div class="intro-heading text-uppercase">Encantado de conocerte</div>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Comencemos</a>
         </div>
       </div>
     </header>
@@ -73,8 +73,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Services</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Roles</h2>
+            <h3 class="section-subheading text-muted">Estos son los 3 principales roles en los que destacan mis mejores habilidades:</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -111,7 +111,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Portfolio</h2>
+            <h2 class="section-heading text-uppercase">Habilidades</h2>
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
           </div>
         </div>
@@ -290,40 +290,23 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Biografía</h2>
+            <h3 class="section-subheading text-muted">Conoce mi historia, conoce mas acerca de mi. Mi Biografía esta mezclada con temas personales y temas profesionales ¡Disfrutala!.</h3>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-              <h4>Kay Garland</h4>
-              <p class="text-muted">Lead Designer</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
+              <img class="" src="" alt="">
+              <h4></h4>
+              <p class=""></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>Larry Parker</h4>
-              <p class="text-muted">Lead Marketer</p>
+              <h4>José Parra</h4>
+              <p class="text-muted">Bogotá DC.</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -343,34 +326,11 @@
               </ul>
             </div>
           </div>
-          <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-              <h4>Diana Pertersen</h4>
-              <p class="text-muted">Lead Developer</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+            <p class="large text-muted">Juan Luis Londoño Arias nació el 28 de enero de 1994 en la ciudad colombiana de Medellín.12​13​ Hijo de Marlli Arias y Luis Londoño; tiene una hermana mayor llamada Manuela,14​ que estudió psicología y filosofía.15​ En su infancia temprana, era un aficionado al fútbol, deporte que practicó por ocho años seguidos.16​ Ocupó las divisiones inferiores en los equipos Atlético Nacional y Equidad Club Deportivo.12​17​ Asimismo participó en torneos de voleibol, pingpong, ajedrez, entre otros.14​ Por otro lado, también tenía una pasión por la música, que mostró tanto en su casa como en la escuela y a su mejor amiga Camila Andriuolo que después de un tiempo fue su novia durante años.14​ Estudió en el colegio Hontanares en El Retiro, y solía escribir cartas a encargo para las novias de sus compañeros de clases.15​ En el décimo grado participó en un concurso de canto y obtuvo el primer lugar de la competencia con el tema «Tengo ganas» de Andrés Cepeda, y en diciembre de ese mismo año protagonizó una obra de teatro.14​ 
+
+            Con quince años compuso con un allegado una canción titulada «No quiero» y un año después Juan Parra, su tío, le ofreció como regalo de cumpleaños grabar la canción en un estudio.14​ Inicialmente, no tenía intenciones de enfocarse en la música; «sin embargo, sorprendió a un grupo de productores que terminaron por ofrecerle grabar un disco, no sin antes advertirle que necesitaba un nombre más sonoro, fácil de recordar y bien recibido en el círculo del género urbano».14​ Así, adoptó el nombre artístico de Maluma, que es una combinación de las dos primeras letras del nombre de su madre Marlli, su padre Luis y su hermana Manuela.18​16​ Según el mismo artista: «Es un homenaje a ellos porque los amo y son el motor de mi carrera».16​ Sobre su decisión de ser músico, sostiene que fue muy difícil elegir entre el fútbol y la música, ya que ambas actividades lo apasionan.16​ Su padre, en un principio se opuso a la idea del cantante, alegando que Maluma había dedicado mucho tiempo al fútbol y también porque deseaba que fuera un futbolista exitoso y no un cantante de reguetón; pero luego lo apoyó en su decisión.16​14​ En 2010, con dieciséis años, Maluma comenzó a recibir instrucción vocal,14​ y cursando el último año de bachillerato, decidió lanzarse definitivamente al estrellato.12​14
           </div>
         </div>
       </div>
@@ -409,8 +369,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Contacto</h2>
+            <h3 class="section-subheading text-muted">Dejame tus inquietudes ¡Intentemoslo! Me gustan los retos, Me gusta platicar.</h3>
           </div>
         </div>
         <div class="row">
@@ -419,28 +379,28 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
-                    <input class="form-control" id="name" type="text" placeholder="Your Name *" required data-validation-required-message="Please enter your name.">
+                    <input class="form-control" id="name" type="text" placeholder="Tu Nombre *" required data-validation-required-message="Por favor ingresa tu nombre.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="email" type="email" placeholder="Your Email *" required data-validation-required-message="Please enter your email address.">
+                    <input class="form-control" id="email" type="email" placeholder="Tu Correo *" required data-validation-required-message="Por favor ingresa tu correo electrónico.">
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" required data-validation-required-message="Please enter your phone number.">
+                    <input class="form-control" id="phone" type="tel" placeholder="Tu Celular *" required data-validation-required-message="Por favor ingresa tu numero	de celular.">
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
-                    <textarea class="form-control" id="message" placeholder="Your Message *" required data-validation-required-message="Please enter a message."></textarea>
+                    <textarea class="form-control" id="message" placeholder="Tu Mensaje *" required data-validation-required-message="Por favor ingrese un mensaje."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-lg-12 text-center">
                   <div id="success"></div>
-                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                  <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Enviar mensaje</button>
                 </div>
               </div>
             </form>
@@ -454,7 +414,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2017</span>
+            <span class="copyright">Copyright &copy; 2013-2017 Blackrock Digital LLC.</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
