--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>José Luis Parra Fajardo - Perfil Profesional</title>
+    <title>José Luis Parra Fajardo - Portal Profesional</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,9 +40,9 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#services">Roles</a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Habilidades</a>
-            </li>
+            </li>-->
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">Proceso</a>
             </li>
@@ -61,7 +61,7 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">¡Bienvenido a mi pagina peronal!</div>
+          <div class="intro-lead-in">¡Bienvenido a mi portal profesional!</div>
           <div class="intro-heading text-uppercase">Encantado de conocerte</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Comencemos</a>
         </div>
@@ -71,42 +71,62 @@
     <!-- Services -->
     <section id="services">
       <div class="container">
+      	<div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">ROLES CERTIFICADOS</h2>
+            <h3 class="section-subheading text-muted">Estos 3 roles estan certificados</h3>
+          </div>
+        </div>
+      	  <div class="row text-center">
+          <div class="col-md-4">
+			<img src="img/ui.png" width="128" height="128">
+            <h4 class="service-heading"><br>Diseñador UI & UX</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/multimedia.png" width="128" height="128">
+            <h4 class="service-heading"><br>Produtor audiovisual</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+			<img src="img/megafono.png" width="128" height="128">
+            <h4 class="service-heading"><br>Marketing estrategic</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+        </div><br><br><br>
+        <div style="max-width: 100% ">
+        	<center>
+          <img src="img/3.jpg" width="400" height="400" align="">
+            </center><br><br><br><br><br><br>
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Roles</h2>
-            <h3 class="section-subheading text-muted">Estos son los 3 principales roles en los que destacan mis mejores habilidades:</h3>
+            <h2 class="section-heading text-uppercase">ROLES EMPÍRICOS</h2>
+            <h3 class="section-subheading text-muted">Incursionando en estos temas, se ha adquirido conocimientos basicos en los siguientes ambitos:</h3>
           </div>
         </div>
-        <div class="row text-center">
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">E-Commerce</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Responsive Design</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-          </div>
-          <div class="col-md-4">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
-            </span>
-            <h4 class="service-heading">Web Security</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-          </div>
         </div>
+ 		<div class="row text-center">
+          <div class="col-md-4">
+			<img src="img/apoyar.png" width="128" height="128">
+            <h4 class="service-heading"><br>Life coaching</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <img src="img/pizarra.png" width="128" height="128">
+            <h4 class="service-heading"><br>Consultoría empresarial</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+			<img src="img/codificacion.png" width="128" height="128">
+            <h4 class="service-heading"><br>Editor WEB</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+        </div><br><br><br>
       </div>
     </section>
 
     <!-- Portfolio Grid -->
+<!--
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
@@ -203,14 +223,14 @@
         </div>
       </div>
     </section>
-
+-->
     <!-- About -->
     <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">About</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Proceso</h2>
+            <h3 class="section-subheading text-muted">Esta es la metodología que utilizo para aplicar en cualquier rol de los antes vistos:</h3>
           </div>
         </div>
         <div class="row">
@@ -218,26 +238,26 @@
             <ul class="timeline">
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/flecha.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>2009-2011</h4>
-                    <h4 class="subheading">Our Humble Beginnings</h4>
+                    <h4>Objetivo</h4>
+                    <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Antes de empezar a trabajar en algo, siempre fijo objetivos. Objetivos para darle enfoque al trabajo a realizar, para darle mas optimización, para fijar una ruta a recorrer y unos pasos a seguir para cumplirlos.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/lupa.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>March 2011</h4>
-                    <h4 class="subheading">An Agency is Born</h4>
+                    <h4>Investigación o incorporación</h4>
+                    <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -246,12 +266,12 @@
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/man.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>December 2012</h4>
-                    <h4 class="subheading">Transition to Full Service</h4>
+                    <h4>Desarrollo</h4>
+                    <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -264,8 +284,8 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h4>July 2014</h4>
-                    <h4 class="subheading">Phase Two Expansion</h4>
+                    <h4>Evaluación de resultados</h4>
+                    <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -274,9 +294,9 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <h4>Be Part
-                    <br>Of Our
-                    <br>Story!</h4>
+                  <h4>Iterar
+                    <br>&
+                    <br>Retornar</h4>
                 </div>
               </li>
             </ul>
