--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       	  <div class="row text-center">
           <div class="col-md-4">
-			<img src="img/ui.png" width="128" height="128">
+			<img src="img/UI.png" width="128" height="128">
             <h4 class="service-heading"><br>Diseñador UI & UX</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
           </div>
