--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
         </div>
       	  <div class="row text-center">
           <div class="col-md-4">
-			<img src="img/UI.png" width="128" height="128">
-            <h4 class="service-heading"><br>Diseñador UI & UX</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+			<img src="img/ui.png" width="128" height="128">
+            <h4 class="service-heading"><br>Diseño UI & UX</h4>
+            <p class="text-muted"><br>Diseño de interfaces efectivas, usables e interactivas. Para móviles, web, escritorio o el producto que quieras. Aplicando UX y usabilidad a tus proyectos.</p>
           </div>
           <div class="col-md-4">
             <img src="img/multimedia.png" width="128" height="128">
-            <h4 class="service-heading"><br>Produtor audiovisual</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading"><br>Producción audiovisual</h4>
+            <p class="text-muted"><br>Sea para YouTube Vine, Vimeo o Facebook, produzco videos contundentes y exitosos en plataformas digitales. Desde planeación, producción, edición y post-producción.</p>
           </div>
           <div class="col-md-4">
 			<img src="img/megafono.png" width="128" height="128">
-            <h4 class="service-heading"><br>Marketing estrategic</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading"><br>Marketing y Estrategia Digital</h4>
+            <p class="text-muted">Soy Estratega Digital, no un Community Manager. Se maneja y se optimiza presupuestos en AdWords, FB Ads y Twitter. Estrategias inbound y posicionamiento de marcas online.</p>
           </div>
         </div><br><br><br>
         <div style="max-width: 100% ">
@@ -107,19 +107,19 @@
         </div>
  		<div class="row text-center">
           <div class="col-md-4">
-			<img src="img/apoyar.png" width="128" height="128">
-            <h4 class="service-heading"><br>Life coaching</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-          </div>
-          <div class="col-md-4">
             <img src="img/pizarra.png" width="128" height="128">
             <h4 class="service-heading"><br>Consultoría empresarial</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">¿Tienes una idea? ¿Tienes un proyecto empresarial? ¿Tu empresa tiene problemas? Para todo siempre existe una solución, ¡Háblame!  Encontremos esa solución.</p>
           </div>
           <div class="col-md-4">
-			<img src="img/codificacion.png" width="128" height="128">
-            <h4 class="service-heading"><br>Editor WEB</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+			<img src="img/apoyar.png" width="128" height="128">
+            <h4 class="service-heading"><br>Life coaching</h4>
+            <p class="text-muted">¿Crees que es hora de hacer un cambio en tu vida profesional o personal? ¿Tienes dudas existenciales o careces de propósito? Platícame un poco mas, te mostrare tu mejor versión.</p>
+          </div>          
+          <div class="col-md-4">
+			<img src="img/capacitacion.png" width="128" height="128">
+            <h4 class="service-heading"><br>Capacitaciones</h4>
+            <p class="text-muted">Oratoria basada en storytelling, estructuración de presentaciones y explicación de discursos para capacitación, ya sea para nuevos empleados, nuevos clientes u otro segmento.</p>
           </div>
         </div><br><br><br>
       </div>
@@ -260,13 +260,13 @@
                     <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">Para entender una situación, primero hay que investigar. Por eso que este paso es importante antes de desarrollar, debido a que investigando podemos entender cual es el camino de desarrollo que debemos tomar. Entorno, competencia, objetivo.</p>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/man.png" alt="">
+                  <img class="rounded-circle img-fluid" src="img/llave-inglesa.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -274,13 +274,13 @@
                     <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">¡A trabajar! Teniendo unas buenas bases, comencemos a trabajar en ello sin descartar detalles y siendo meticulosos.</p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                  <img class="rounded-circle img-fluid" src="img/busqueda.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -288,7 +288,7 @@
                     <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                    <p class="text-muted">¡Observemos que funcionó y que no! Evaluemos si el objetivo se cumplió, si los resultados son positivos, después de evaluar y reconocer los puntos débiles, volvamos a comenzar el ciclo. ¡Todo evoluciona!</p>
                   </div>
                 </div>
               </li>
@@ -329,17 +329,17 @@
               <p class="text-muted">Bogotá DC.</p>
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://twitter.com/LuisFajardo__">
                     <i class="fa fa-twitter"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://www.facebook.com/LuiGiJLProductions">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#">
+                  <a href="https://co.linkedin.com/in/joseluispf">
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
@@ -348,15 +348,30 @@
           </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">Juan Luis Londoño Arias nació el 28 de enero de 1994 en la ciudad colombiana de Medellín.12​13​ Hijo de Marlli Arias y Luis Londoño; tiene una hermana mayor llamada Manuela,14​ que estudió psicología y filosofía.15​ En su infancia temprana, era un aficionado al fútbol, deporte que practicó por ocho años seguidos.16​ Ocupó las divisiones inferiores en los equipos Atlético Nacional y Equidad Club Deportivo.12​17​ Asimismo participó en torneos de voleibol, pingpong, ajedrez, entre otros.14​ Por otro lado, también tenía una pasión por la música, que mostró tanto en su casa como en la escuela y a su mejor amiga Camila Andriuolo que después de un tiempo fue su novia durante años.14​ Estudió en el colegio Hontanares en El Retiro, y solía escribir cartas a encargo para las novias de sus compañeros de clases.15​ En el décimo grado participó en un concurso de canto y obtuvo el primer lugar de la competencia con el tema «Tengo ganas» de Andrés Cepeda, y en diciembre de ese mismo año protagonizó una obra de teatro.14​ 
+            <p class="large text-muted">José Luis Parra Fajardo nació el 13 de septiembre de 1995 en la ciudad colombiana de Bogotá. Es un Product Designer, Productor Audiovisual, Marketer y estratega Digital, Consultor, Coach y Capacitador. Actualmente ejerciendo en la Ciudad de Bogotá.
+Reconocido por la meticulosidad en sus trabajos y versatilidad en ellos. En sus cualidades resaltan las de la imparcialidad, el ingenio de soluciones y las buenas habilidades sociales para comunicar efectivamente y tratar a otras personas.<br><br>
 
-            Con quince años compuso con un allegado una canción titulada «No quiero» y un año después Juan Parra, su tío, le ofreció como regalo de cumpleaños grabar la canción en un estudio.14​ Inicialmente, no tenía intenciones de enfocarse en la música; «sin embargo, sorprendió a un grupo de productores que terminaron por ofrecerle grabar un disco, no sin antes advertirle que necesitaba un nombre más sonoro, fácil de recordar y bien recibido en el círculo del género urbano».14​ Así, adoptó el nombre artístico de Maluma, que es una combinación de las dos primeras letras del nombre de su madre Marlli, su padre Luis y su hermana Manuela.18​16​ Según el mismo artista: «Es un homenaje a ellos porque los amo y son el motor de mi carrera».16​ Sobre su decisión de ser músico, sostiene que fue muy difícil elegir entre el fútbol y la música, ya que ambas actividades lo apasionan.16​ Su padre, en un principio se opuso a la idea del cantante, alegando que Maluma había dedicado mucho tiempo al fútbol y también porque deseaba que fuera un futbolista exitoso y no un cantante de reguetón; pero luego lo apoyó en su decisión.16​14​ En 2010, con dieciséis años, Maluma comenzó a recibir instrucción vocal,14​ y cursando el último año de bachillerato, decidió lanzarse definitivamente al estrellato.12​14
+
+
+Desde los 14 años comenzó a trabajar en una Discoteca (Puente Nacional, Santander), le gustaba mucho su trabajo, a pesar de no obtener remuneración debido a temas administrativos. Duro 2 años de su adolescencia en el empleo, hasta llegar a ser el Administrador de la discoteca.
+
+Debido a que no ganaba un buen sueldo y se le dificultaba madrugar con los horarios de trabajo, decidió buscar empleo en Chiquinquirá Boyacá, y se estableció en una estación de servicio, donde tuvo un empleo como "Lavador de autos", Debido a la falta de estabilidad de un Jefe te patio, logró obtener un puesto dirigiendo el equipo de lavado. 
+
+Después de haber culminado su bachiller se fue para la capital (Bogotá, Colombia) en busca de mejores oportunidades. En la que se encontró con empleos mejor remunerados como Conductor de Uber, Domiciliario, Mientras culminaba su Técnico en el SENA.
+
+Obtuvo una Beca en Platzi y se certifico en los 3 Roles que le ayudaron a motivarse para montar empresa y a incursionar en otros ámbitos como la Consultoría, el Life Coach, capacitaciones. Actualmente está montando su empresa con ayuda de la Camara de Comercio de Bogotá y el MinTic.
+<br><br>
+
+
+
+Su objetivo es vivir para servir, ya que frecuentemente cita la frase "El que no vive para servir, no sirve para vivir"
           </div>
         </div>
       </div>
     </section>
 
     <!-- Clients -->
+
     <section class="py-5">
       <div class="container">
         <div class="row">
@@ -439,17 +454,17 @@
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://twitter.com/LuisFajardo__">
                   <i class="fa fa-twitter"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/LuiGiJLProductions">
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://co.linkedin.com/in/joseluispf">
                   <i class="fa fa-linkedin"></i>
                 </a>
               </li>
