--- a/index.html
+++ b/index.html
@@ -703,6 +703,17 @@ Su objetivo es vivir para servir, ya que frecuentemente cita la frase "El que no
 
     <!-- Custom scripts for this template -->
     <script src="js/agency.min.js"></script>
+	    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112708310-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-112708310-1');
+    </script>
+
 
   </body>
 
