--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
     <!-- Custom styles for this template -->
     <link href="css/agency.min.css" rel="stylesheet">
+	 
+    <!-- Icono de barra de title -->
+    <link rel="shortcut icon" href="/img/favicon.ico" />
 
   </head>
 
