--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <link href="css/agency.min.css" rel="stylesheet">
 	 
     <!-- Icono de barra de title -->
-    <link rel="shortcut icon" href="/img/favicon.ico" />
-
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+	  
   </head>
 
   <body id="page-top">
