--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="col-md-4">
 			<img src="img/megafono.png" width="128" height="128">
             <h4 class="service-heading"><br>Marketing y Estrategia Digital</h4>
-            <p class="text-muted">Soy Estratega Digital, no un Community Manager. Se maneja y se optimiza presupuestos en AdWords, FB Ads y Twitter. Estrategias inbound y posicionamiento de marcas online.</p>
+            <p class="text-muted">Soy Estratega Digital, no un Community Manager. Se maneja y se optimiza presupuestos en AdWords, FB Ads y Twitter. Estrategias SEO, inbound y posicionamiento de marcas online.</p>
           </div>
         </div><br><br><br>
         <div style="max-width: 100% ">
