--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
           <div class="col-md-4">
 			<img src="img/ui.png" width="128" height="128">
             <h4 class="service-heading"><br>Diseño UI & UX</h4>
-            <p class="text-muted"><br>Diseño de interfaces efectivas, usables e interactivas. Para móviles, web, escritorio o el producto que quieras. Aplicando UX, usabilidad a tus proyectos y metodologías como Lean UX. <a href="https://platzi.com/@luisfajardo__/carrera/producto/diploma/">Ver diploma</a></p>
+            <p class="text-muted"><br>Diseño de interfaces efectivas, usables e interactivas. Para móviles, web, escritorio o el producto que quieras. Aplicando UX, usabilidad a tus proyectos y metodologías como Lean UX. <a href="https://platzi.com/@luisfajardo__/carrera/producto/diploma/"><font color="blue"> Ver diploma</font></a></p>
           </div>
           <div class="col-md-4">
             <img src="img/multimedia.png" width="128" height="128">
             <h4 class="service-heading"><br>Producción audiovisual</h4>
-            <p class="text-muted"><br>Sea para YouTube Vine, Vimeo o Facebook, Twitter, produzco videos contundentes y exitosos en plataformas digitales. Desde planeación, producción, edición y post-producción. <a href="https://platzi.com/@luisfajardo__/carrera/audiovisual/diploma/">Ver diploma</a></p></p>
+            <p class="text-muted"><br>Sea para YouTube Vine, Vimeo o Facebook, Twitter, produzco videos contundentes y exitosos en plataformas digitales. Desde planeación, producción, edición y post-producción. <a href="https://platzi.com/@luisfajardo__/carrera/audiovisual/diploma/"> <font color="blue"> Ver diploma</font></a></p></p>
           </div>
           <div class="col-md-4">
 			<img src="img/megafono.png" width="128" height="128">
             <h4 class="service-heading"><br>Marketing y Estrategia Digital</h4>
-            <p class="text-muted">Soy Estratega Digital, no un Community Manager. Se maneja y se optimiza presupuestos en AdWords, FB Ads y Twitter. Estrategias inbound y posicionamiento de marcas online. <a href="https://platzi.com/@luisfajardo__/carrera/marketing-estrategia-digital/diploma/">Ver diploma</a></p></p>
+            <p class="text-muted">Soy Estratega Digital, no un Community Manager. Se maneja y se optimiza presupuestos en AdWords, FB Ads y Twitter. Estrategias inbound y posicionamiento de marcas online. <a href="https://platzi.com/@luisfajardo__/carrera/marketing-estrategia-digital/diploma/"><font color="blue"> Ver diploma</font></a></p></p>
           </div>
         </div><br><br><br>
         <div style="max-width: 100% ">
