--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="https://www.facebook.com/LuiGiJLProductions">
+                  <a href="https://www.facebook.com/luisfajardo.contacto/">
                     <i class="fa fa-facebook"></i>
                   </a>
                 </li>
@@ -462,7 +462,7 @@ Su objetivo es vivir para servir, ya que frecuentemente cita la frase "El que no
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://www.facebook.com/LuiGiJLProductions">
+                <a href="https://www.facebook.com/luisfajardo.contacto/">
                   <i class="fa fa-facebook"></i>
                 </a>
               </li>
